more qustions added

--- a/index.html
+++ b/index.html
@@ -188,6 +188,122 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Question 3 -->
+                            <div class="question_box" data-question-index="2" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="2" data-audio="./q3.mp3">
+                                    <p style="font-size: 1.5rem;">What is recommended for driving in extreme weather?
+                                    </p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q3" value="b">
+                                            <span>Speed up to avoid the weather</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q3" value="a">
+                                            <span>Drive through flooded areas quickly</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q3" value="c">
+                                            <span>Turn off headlights to save battery</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q3" value="d">
+                                            <span>Carry emergency supplies and check the forecast</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Question 4 -->
+                            <div class="question_box" data-question-index="3" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="3" data-audio="./q4.mp3">
+                                    <p style="font-size: 1.5rem;">How can you avoid food poisoning while on the move?
+                                    </p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q4" value="a">
+                                            <span>Eat at clean, reputable eateries and carry bottled water</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q4" value="b">
+                                            <span>Eat from roadside vendors</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q4" value="c">
+                                            <span>Skip meals</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q4" value="d">
+                                            <span>Drink tap water</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Question 5 -->
+                            <div class="question_box" data-question-index="4" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="4" data-audio="./q5.mp3">
+                                    <p style="font-size: 1.5rem;">What is a key precaution to avoid violent conflict
+                                        situations? </p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q5" value="b">
+                                            <span>Carry a personal weapon</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q5" value="a">
+                                            <span>Avoid working alone in high-risk areas and report tensions
+                                                early</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q5" value="c">
+                                            <span>Always confront aggressors</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q5" value="d">
+                                            <span>Ignore early signs of tension</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Question 6 -->
+                            <div class="question_box" data-question-index="5" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="5" data-audio="./q6.mp3">
+                                    <p style="font-size: 1.5rem;">How should you deal with aggressive drivers?</p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q6" value="a">
+                                            <span>Use your horn constantly</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q6" value="b">
+                                            <span>Argue back if provoked</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q6" value="c">
+                                            <span>Stay calm and avoid engagement</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q6" value="d">
+                                            <span>Call them out publicly</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!-- Quiz 1 Completion Screen -->
                         <div class="quiz-completion" style="display: none;">
@@ -223,58 +339,115 @@
                             <div class="countdown">Starting in 5...</div>
                         </div>
                         <div class="quiz-container">
-                            <!-- question 1 -->
+                            <!-- question 7 -->
                             <div class="question_box" data-question-index="0">
                                 <img src="./heat_stress.jpg" alt="heat stress" class="quiz-image">
-                                <div class="question" data-question-index="0" data-audio="./q3.mp3">
+                                <div class="question" data-question-index="0" data-audio="./q7.mp3">
                                     <p style="font-size: 1.5rem;">What should you avoid to prevent heat stress?</p>
                                     <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
                                         and then click <strong>Submit</strong> </p>
                                     <div class="options">
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q1" value="a">
+                                            <input type="radio" name="quiz2-q7" value="a">
                                             <span>Drinking caffeine or alcohol</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q1" value="b">
+                                            <input type="radio" name="quiz2-q7" value="b">
                                             <span>Wearing a cap</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q1" value="c">
+                                            <input type="radio" name="quiz2-q7" value="c">
                                             <span>Taking breaks</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q1" value="d">
+                                            <input type="radio" name="quiz2-q7" value="d">
                                             <span>Hydrating</span>
                                         </label>
                                         <button class="submit-quiz">Submit</button>
                                     </div>
                                 </div>
                             </div>
-                            <!-- question 2 -->
+                            <!-- question 8 -->
                             <div class="question_box" data-question-index="1" style="display: none;">
                                 <img src="./slip.jpg" alt="heat stress" class="quiz-image">
-                                <div class="question" data-question-index="1" data-audio="./q4.mp3">
+                                <div class="question" data-question-index="1" data-audio="./q8.mp3">
                                     <p style="font-size: 1.4rem;">Which of the following is recommended to prevent slips
                                         and falls?</p>
                                     <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
                                         and then click <strong>Submit</strong> </p>
                                     <div class="options">
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q2" value="a">
+                                            <input type="radio" name="quiz2-q8" value="a">
                                             <span>High-heeled shoes</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q2" value="b">
+                                            <input type="radio" name="quiz2-q8" value="b">
                                             <span>Rubber slippers</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q2" value="c">
+                                            <input type="radio" name="quiz2-q8" value="c">
                                             <span>Non-slip shoes and staying alert</span>
                                         </label>
                                         <label class="option">
-                                            <input type="radio" name="quiz2-q2" value="d">
+                                            <input type="radio" name="quiz2-q8" value="d">
                                             <span>Barefoot walking</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Question 9 -->
+                            <div class="question_box" data-question-index="2" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="2" data-audio="./q9.mp3">
+                                    <p style="font-size: 1.5rem;">What is the best way to prevent ergonomic injuries?
+                                    </p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz2-q9" value="b">
+                                            <span>Lift quickly to save time</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz2-q9" value="a">
+                                            <span>Use proper posture and take breaks to stretch</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz2-q9" value="c">
+                                            <span>Avoid asking for help</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz2-q9" value="d">
+                                            <span>Sit continuously without breaks</span>
+                                        </label>
+                                        <button class="submit-quiz">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Question 10 -->
+                            <div class="question_box" data-question-index="1" style="display: none;">
+                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <div class="question" data-question-index="1" data-audio="./q10.mp3">
+                                    <p style="font-size: 1.5rem;">What should you do around flammable materials? </p>
+                                    <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
+                                        and then click <strong>Submit</strong> </p>
+                                    <div class="options">
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q2" value="b">
+                                            <span>Store them properly and keep extinguishers handy</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q2" value="a">
+                                            <span>Ignore small leaks or smells</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q2" value="c">
+                                            <span>Use them near open flames</span>
+                                        </label>
+                                        <label class="option">
+                                            <input type="radio" name="quiz1-q2" value="d">
+                                            <span> Keep them in your bag</span>
                                         </label>
                                         <button class="submit-quiz">Submit</button>
                                     </div>
