--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             </div>
                             <!-- Question 3 -->
                             <div class="question_box" data-question-index="2" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./bad-weather.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="2" data-audio="./q3.mp3">
                                     <p style="font-size: 1.5rem;">What is recommended for driving in extreme weather?
                                     </p>
@@ -219,7 +219,7 @@
                             </div>
                             <!-- Question 4 -->
                             <div class="question_box" data-question-index="3" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./spoiled-food.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="3" data-audio="./q4.mp3">
                                     <p style="font-size: 1.5rem;">How can you avoid food poisoning while on the move?
                                     </p>
@@ -248,7 +248,7 @@
                             </div>
                             <!-- Question 5 -->
                             <div class="question_box" data-question-index="4" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./conflicts.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="4" data-audio="./q5.mp3">
                                     <p style="font-size: 1.5rem;">What is a key precaution to avoid violent conflict
                                         situations? </p>
@@ -278,7 +278,7 @@
                             </div>
                             <!-- Question 6 -->
                             <div class="question_box" data-question-index="5" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./aggressive-driving.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="5" data-audio="./q6.mp3">
                                     <p style="font-size: 1.5rem;">How should you deal with aggressive drivers?</p>
                                     <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
@@ -398,7 +398,7 @@
                             </div>
                             <!-- Question 9 -->
                             <div class="question_box" data-question-index="2" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./injury.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="2" data-audio="./q9.mp3">
                                     <p style="font-size: 1.5rem;">What is the best way to prevent ergonomic injuries?
                                     </p>
@@ -427,7 +427,7 @@
                             </div>
                             <!-- Question 10 -->
                             <div class="question_box" data-question-index="1" style="display: none;">
-                                <img src="./driving.jpg" alt="driving safely" class="quiz-image">
+                                <img src="./extinguisher.jpg" alt="driving safely" class="quiz-image">
                                 <div class="question" data-question-index="1" data-audio="./q10.mp3">
                                     <p style="font-size: 1.5rem;">What should you do around flammable materials? </p>
                                     <p style="color: green; font-weight: 400; font-style: italic;">Select correct answer
